グループ一覧取得のAPIを追加した
